--- a/richwysiwygeditor/src/main/res/layout/popup_text_size.xml
+++ b/richwysiwygeditor/src/main/res/layout/popup_text_size.xml
@@ -12,7 +12,8 @@
         android:layout_weight="1"
         android:background="@color/transparent"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/outline_format_size_black_48" />
+        app:srcCompat="@drawable/outline_format_size_black_48"
+        android:tag="1"/>
 
     <ImageButton
         android:id="@+id/text_size2"
@@ -22,7 +23,8 @@
         android:layout_weight="1"
         android:background="@color/transparent"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/outline_format_size_black_48" />
+        app:srcCompat="@drawable/outline_format_size_black_48"
+        android:tag="2"/>
 
     <ImageButton
         android:id="@+id/text_size3"
@@ -32,7 +34,8 @@
         android:layout_weight="1"
         android:background="@color/transparent"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/outline_format_size_black_48" />
+        app:srcCompat="@drawable/outline_format_size_black_48"
+        android:tag="3"/>
 
     <ImageButton
         android:id="@+id/text_size4"
@@ -42,7 +45,8 @@
         android:layout_weight="1"
         android:background="@color/transparent"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/outline_format_size_black_48" />
+        app:srcCompat="@drawable/outline_format_size_black_48"
+        android:tag="4"/>
 
     <ImageButton
         android:id="@+id/text_size5"
@@ -52,5 +56,6 @@
         android:layout_weight="1"
         android:background="@color/transparent"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/outline_format_size_black_48" />
+        app:srcCompat="@drawable/outline_format_size_black_48"
+        android:tag="5"/>
 </LinearLayout>
