--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -45,86 +45,113 @@
             android:background="@color/transparent"
             android:orientation="horizontal">
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_textSize"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textSize"
+                android:contentDescription="@string/text_size"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_format_size_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_fgColor"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textColor"
+                android:contentDescription="@string/text_color"
                 android:scaleType="fitCenter"
                 android:src="@drawable/baseline_format_color_text_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_bgColor"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:layout_weight="1"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textColor"
+                android:contentDescription="@string/text_color"
                 android:scaleType="fitCenter"
                 android:src="@drawable/baseline_format_color_fill_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_textBold"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textBold"
+                android:contentDescription="@string/text_bold"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_format_bold_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_textItalic"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textItalic"
+                android:contentDescription="@string/text_italic"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_format_italic_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_textUnderLine"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:layout_weight="1"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textAlign"
+                android:contentDescription="@string/text_align"
                 android:scaleType="fitCenter"
                 android:src="@drawable/baseline_format_underlined_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_textStrike"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textStrike"
+                android:contentDescription="@string/text_strike"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_format_strikethrough_black_48" />
 
-            <com.lumyjuwon.richwysiwygeditor.CheckedImageButton
+            <com.lumyjuwon.richwysiwygeditor.EditorActionButton
                 android:id="@+id/button_textAlign"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/textAlign"
+                android:contentDescription="@string/text_align"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_format_align_left_black_48" />
+
+            <ImageButton
+                android:id="@+id/button_insertLink"
+                android:layout_width="@dimen/toolbar_icon_width_size"
+                android:layout_height="@dimen/toolbar_icon_height_size"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/insert_link"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_link_insert_black" />
+
+            <ImageButton
+                android:id="@+id/button_removeLink"
+                android:layout_width="@dimen/toolbar_icon_width_size"
+                android:layout_height="@dimen/toolbar_icon_height_size"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/remove_link"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_link_remove_black" />
+
+            <ImageButton
+                android:id="@+id/button_insert_line"
+                android:layout_width="@dimen/toolbar_icon_width_size"
+                android:layout_height="@dimen/toolbar_icon_height_size"
+                android:background="?attr/selectableItemBackground"
+                android:contentDescription="@string/insert_line"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_line_black" />
 
             <ImageButton
                 android:id="@+id/button_imageInsert"
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/ImageUpload"
+                android:contentDescription="@string/insert_image"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_image_black_48"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -139,7 +166,7 @@
                 android:layout_width="@dimen/toolbar_icon_width_size"
                 android:layout_height="@dimen/toolbar_icon_height_size"
                 android:background="?attr/selectableItemBackground"
-                android:contentDescription="@string/videoUpload"
+                android:contentDescription="@string/insert_video"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_slideshow_black_48"
                 app:layout_constraintBottom_toBottomOf="parent"
