--- a/richwysiwygeditor/src/main/res/layout/dialog_text_size.xml
+++ b/richwysiwygeditor/src/main/res/layout/dialog_text_size.xml
@@ -18,5 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/text_size_hint"
-        android:inputType="number" />
+        android:inputType="number" >
+
+        <requestFocus/>
+
+    </EditText>
+
 </LinearLayout>
