--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -49,7 +49,17 @@
                 android:id="@+id/button_text_size"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_size"
-                android:src="@drawable/outline_format_size_black_48" />
+                android:src="@drawable/ic_text_size_black" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_undo"
+                style="@style/ActionButton"
+                android:src="@drawable/ic_undo_black" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_redo"
+                style="@style/ActionButton"
+                android:src="@drawable/ic_redo_black" />
 
 <!--            <com.gee12.htmlwysiwygeditor.ActionButton-->
 <!--                android:id="@+id/button_text_headering"-->
@@ -60,43 +70,53 @@
                 android:id="@+id/button_text_bold"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_bold"
-                android:src="@drawable/outline_format_bold_black_48" />
+                android:src="@drawable/ic_bold_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_italic"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_italic"
-                android:src="@drawable/outline_format_italic_black_48" />
+                android:src="@drawable/ic_italic_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_underLine"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_align"
-                android:src="@drawable/baseline_format_underlined_black_48" />
+                android:src="@drawable/ic_underline_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_strike"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_strike"
-                android:src="@drawable/outline_format_strikethrough_black_48" />
+                android:src="@drawable/ic_strikethrough_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_color"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_color"
-                android:src="@drawable/baseline_format_color_text_black_48" />
+                android:src="@drawable/ic_text_color_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_background_color"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_color"
-                android:src="@drawable/baseline_format_color_fill_black_48" />
+                android:src="@drawable/ic_background_color_black" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_code"
+                style="@style/ActionButton"
+                android:src="@drawable/ic_code_black" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_quote"
+                style="@style/ActionButton"
+                android:src="@drawable/ic_quote_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_align"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_align"
-                android:src="@drawable/outline_format_align_left_black_48" />
+                android:src="@drawable/ic_align_left_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_unordered_list"
@@ -127,7 +147,7 @@
                 android:id="@+id/button_insert_link"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_link"
-                android:src="@drawable/ic_insert_link_black"/>
+                android:src="@drawable/ic_link_black"/>
 
 <!--            <com.gee12.htmlwysiwygeditor.ActionButton-->
 <!--                android:id="@+id/button_remove_link"-->
@@ -139,19 +159,29 @@
                 android:id="@+id/button_insert_line"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_line"
-                android:src="@drawable/ic_insert_line_black" />
+                android:src="@drawable/ic_line_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_insert_image"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_image"
-                android:src="@drawable/outline_image_black_48" />
+                android:src="@drawable/ic_image_black" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_insert_video"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_video"
-                android:src="@drawable/outline_slideshow_black_48" />
+                android:src="@drawable/ic_video_black" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_insert_table"
+                style="@style/ActionButton"
+                android:src="@drawable/ic_table_black" />
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_insert_formula"
+                style="@style/ActionButton"
+                android:src="@drawable/ic_formula_black" />
 
         </LinearLayout>
     </HorizontalScrollView>
