--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -46,20 +46,22 @@
             android:orientation="horizontal">
 
             <com.gee12.htmlwysiwygeditor.ActionButton
-                android:id="@+id/button_text_size"
-                style="@style/ActionButton"
-                android:contentDescription="@string/text_size"
-                android:src="@drawable/ic_text_size_black" />
-
-            <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_undo"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_undo_black" />
+                android:src="@drawable/ic_undo" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_redo"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_redo_black" />
+                android:src="@drawable/ic_redo" />
+
+            <View style="@style/Separator"/>
+
+            <com.gee12.htmlwysiwygeditor.ActionButton
+                android:id="@+id/button_text_size"
+                style="@style/ActionButton"
+                android:contentDescription="@string/text_size"
+                android:src="@drawable/ic_text_size_black" />
 
 <!--            <com.gee12.htmlwysiwygeditor.ActionButton-->
 <!--                android:id="@+id/button_text_headering"-->
@@ -76,7 +78,7 @@
                 android:id="@+id/button_text_italic"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_italic"
-                android:src="@drawable/ic_italic_black" />
+                android:src="@drawable/ic_italic" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_underLine"
@@ -88,7 +90,7 @@
                 android:id="@+id/button_text_strike"
                 style="@style/ActionButton"
                 android:contentDescription="@string/text_strike"
-                android:src="@drawable/ic_strikethrough_black" />
+                android:src="@drawable/ic_strikethrough" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_color"
@@ -105,12 +107,14 @@
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_code"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_code_black" />
+                android:src="@drawable/ic_code" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_quote"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_quote_black" />
+                android:src="@drawable/ic_quote" />
+
+            <View style="@style/Separator"/>
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_text_align"
@@ -121,33 +125,35 @@
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_unordered_list"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_bullet_list_black" />
+                android:src="@drawable/ic_bullet_list" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_ordered_list"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_numbered_list_black" />
+                android:src="@drawable/ic_numbered_list" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_indent_inc"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_indent_inc_black" />
+                android:src="@drawable/ic_indent_inc" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_indent_dec"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_indent_dec_black" />
+                android:src="@drawable/ic_indent_dec" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_remove_format"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_clear_format_black"/>
+                android:src="@drawable/ic_clear_format"/>
+
+            <View style="@style/Separator"/>
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_insert_link"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_link"
-                android:src="@drawable/ic_link_black"/>
+                android:src="@drawable/ic_link"/>
 
 <!--            <com.gee12.htmlwysiwygeditor.ActionButton-->
 <!--                android:id="@+id/button_remove_link"-->
@@ -165,25 +171,26 @@
                 android:id="@+id/button_insert_image"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_image"
-                android:src="@drawable/ic_image_black" />
+                android:src="@drawable/ic_image" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_insert_video"
                 style="@style/ActionButton"
                 android:contentDescription="@string/insert_video"
-                android:src="@drawable/ic_video_black" />
+                android:src="@drawable/ic_video" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_insert_table"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_table_black" />
+                android:src="@drawable/ic_table" />
 
             <com.gee12.htmlwysiwygeditor.ActionButton
                 android:id="@+id/button_insert_formula"
                 style="@style/ActionButton"
-                android:src="@drawable/ic_formula_black" />
+                android:src="@drawable/ic_formula" />
 
         </LinearLayout>
+
     </HorizontalScrollView>
 
 </RelativeLayout>
