--- a/richwysiwygeditor/src/main/res/values/styles.xml
+++ b/richwysiwygeditor/src/main/res/values/styles.xml
@@ -24,4 +24,14 @@
         <item name="android:scaleType">fitCenter</item>
     </style>
 
+    <style name="Separator">
+        <item name="android:layout_width">1dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">#EEE</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:layout_marginTop">3dp</item>
+        <item name="android:layout_marginBottom">3dp</item>
+    </style>
+
 </resources>
