Fix keyboard opening in TEXT_SIZE dialog; Fix calling MainActivity from RecordActivity (MainActivity.onNewIntent())

--- a/richwysiwygeditor/src/main/res/layout/dialog_text_size.xml
+++ b/richwysiwygeditor/src/main/res/layout/dialog_text_size.xml
@@ -18,10 +18,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/text_size_hint"
-        android:inputType="number" >
+        android:inputType="number" />
 
-        <requestFocus/>
+<!--        <requestFocus/>-->
 
-    </EditText>
+<!--    </EditText>-->
 
 </LinearLayout>
