Add link example to insert link dialog

--- a/richwysiwygeditor/src/main/res/layout/dialog_insert_link.xml
+++ b/richwysiwygeditor/src/main/res/layout/dialog_insert_link.xml
@@ -17,7 +17,7 @@
         android:id="@+id/edit_text_link"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint=""
+        android:hint="@string/link_example"
         android:inputType="textUri" />
 
     <TextView
@@ -31,6 +31,5 @@
         android:id="@+id/edit_text_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint=""
         android:inputType="textUri" />
 </LinearLayout>
