Add editor toolbar gray background; Fix RecordActivity error after closing.

--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -42,7 +42,7 @@
             android:id="@+id/layout_toolbar_buttons"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="@color/transparent"
+            android:background="#DDD"
             android:orientation="horizontal">
 
             <com.gee12.htmlwysiwygeditor.ActionButton
