Refactoring editor.js and other small changes.

--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -34,15 +34,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@drawable/bottom_border_white"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         android:scrollbars="none">
 
         <LinearLayout
             android:id="@+id/layout_toolbar_buttons"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="#DDD"
+            android:background="#EEE"
             android:orientation="horizontal">
 
             <com.gee12.htmlwysiwygeditor.ActionButton
