Fix error with camera in Android 9; Other small fixes.

--- a/richwysiwygeditor/src/main/res/layout/dialog_edit_image.xml
+++ b/richwysiwygeditor/src/main/res/layout/dialog_edit_image.xml
@@ -14,7 +14,11 @@
         android:id="@+id/edit_text_width"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal" />
+        android:inputType="numberDecimal" >
+
+        <requestFocus/>
+
+    </EditText>
 
     <TextView
         android:text="@string/height_points"
