--- a/richwysiwygeditor/src/main/res/layout/popup_image.xml
+++ b/richwysiwygeditor/src/main/res/layout/popup_image.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/toolbar_background">
 
     <ImageButton
         android:id="@+id/popup_insert_image"
