--- a/richwysiwygeditor/src/main/res/layout/popup_text_color.xml
+++ b/richwysiwygeditor/src/main/res/layout/popup_text_color.xml
@@ -2,7 +2,8 @@
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbars="none">
+    android:scrollbars="none"
+    android:background="@color/toolbar_background">
 
     <LinearLayout
         android:layout_width="wrap_content"
