--- a/richwysiwygeditor/src/main/res/layout/layout_editor.xml
+++ b/richwysiwygeditor/src/main/res/layout/layout_editor.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/write_coordinatorLayout"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -192,5 +192,30 @@
         </LinearLayout>
 
     </HorizontalScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_scroll_down"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/ic_arrow_down"
+        app:backgroundTint="@color/fab"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="86dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginLeft="6dp"
+        app:fabSize="mini"
+        android:visibility="gone"
+        style="@style/FloatingButtons"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_scroll_top"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="false"
+        android:src="@drawable/ic_arrow_up"
+        app:backgroundTint="@color/fab"
+        android:layout_margin="6dp"
+        app:fabSize="mini"
+        android:visibility="gone"
+        style="@style/FloatingButtons"/>
 
 </RelativeLayout>
