--- a/richwysiwygeditor/src/main/res/values/colors.xml
+++ b/richwysiwygeditor/src/main/res/values/colors.xml
@@ -24,6 +24,8 @@
     <color name="sky_blue">#00ccff</color>
     <color name="pale_cyan">#ccffff</color>
     <color name="green">#008000</color>
+
     <color name="toolbar_background">#EEE</color>
+    <color name="fab">#4D86B945</color>
 
 </resources>
